<resources>
    <string name="app_name">App_ORM_Jorge_Diaz_Diego_Diaz_Pablo_Mata_Rodrigo_Herrero_Examen_T2</string>
    <string name="titulo_app">THE VAULT: INVENTARIO</string>
    <string name="subtitulo_form">Registrar nueva carta</string>

    <string name="hint_nombre">Nombre de la carta (ej. Charizard)</string>
    <string name="hint_franquicia">Franquicia (ej. Pokémon, Magic)</string>
    <string name="hint_coleccion">Colección (ej. Scarlet &amp; Violet)</string>
    <string name="hint_edicion">Edición / Rareza (ej. 1st Edition)</string>
    <string name="hint_codigo">Código de Verificación (Único)</string>
    <string name="hint_estado">Estado (ej. PSA 10, Mint)</string>
    <string name="hint_precio">Precio de Venta objetivo (€)</string>
    <string name="hint_valor">Valor de mercado (€)</string>

    <string name="btn_guardar">GUARDAR EN MONGODB</string>
    <string name="btn_listar">LISTAR COLECCIÓN</string>
    <string name="btn_about_us">Sobre nosotros</string>

    <string name="about_us_project_label">Proyecto:</string>
    <string name="about_us_project_value">Sistema de Gestión "The Vault"</string>
    <string name="about_us_module_label">Módulo:</string>
    <string name="about_us_module_value">Programación Multimedia y Acceso a Datos</string>
    <string name="about_us_description">Esta aplicación ha sido desarrollada como examen del segundo trimestre. Implementa una arquitectura de acceso a datos mediante un ORM específico, permitiendo la gestión completa de registros (CRUD) en una base de datos externa/interna.</string>
    <string name="about_us_developers_label">Desarrolladores:</string>
    <string name="about_us_developer_1">• Jorge Díaz</string>
    <string name="about_us_developer_2">• Diego Díaz</string>
    <string name="about_us_developer_3">• Pablo Mata</string>
    <string name="about_us_developer_4">• Rodrigo Herrero</string>

    <string name="btn_volver">Volver</string>
    <string name="guardado_exito">Guardado con éxito</string>
    <string name="error_servidor">Error: %1$s</string>
    <string name="error_red">Error de red</string>
    <string name="cartas_recibidas">Cartas recibidas: %1$d</string>
    <string name="error_servidor_general">Error en el servidor</string>
    <string name="error_conexion">Error de conexión: %1$s</string>
    <string name="btn_salir">Salir</string>
    <string name="nuestro_equipo">Nuestro Equipo</string>

    <string name="msg_error_campos">Error: Todos los campos son obligatorios</string>
    <string name="msg_exito_guardar">Carta guardada correctamente en The Vault</string>
    <string name="msg_error_servidor">Error del servidor: %1$s</string>
    <string name="msg_error_red">Fallo de conexión. Revisa tu red.</string>
</resources>