<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/vault_gray_dark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_app"
        android:textColor="@color/vault_yellow_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/Nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="48dp"
        android:hint="@string/hint_nombre"
        android:textColor="@color/white"
        android:textColorHint="@color/vault_gray_light" />

    <EditText
        android:id="@+id/Franquicia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="48dp"
        android:hint="@string/hint_franquicia"
        android:textColor="@color/white"
        android:textColorHint="@color/vault_gray_light" />

    <EditText
        android:id="@+id/Coleccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="48dp"
        android:hint="@string/hint_coleccion"
        android:textColor="@color/white"
        android:textColorHint="@color/vault_gray_light" />

    <EditText
        android:id="@+id/Edicion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="48dp"
        android:hint="@string/hint_edicion"
        android:textColor="@color/white"
        android:textColorHint="@color/vault_gray_light" />

    <EditText
        android:id="@+id/Estado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="48dp"
        android:hint="@string/hint_estado"
        android:textColor="@color/white"
        android:textColorHint="@color/vault_gray_light" />

    <EditText
        android:id="@+id/Precio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="48dp"
        android:hint="@string/hint_precio"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        android:textColorHint="@color/vault_gray_light" />

    <EditText
        android:id="@+id/Valor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="48dp"
        android:hint="@string/hint_valor"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        android:textColorHint="@color/vault_gray_light" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_guardar"
        android:backgroundTint="@color/vault_yellow_dark"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btnCargarCartas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_listar"
        android:backgroundTint="@color/vault_gray_medium"
        android:textColor="@color/white"
        android:layout_marginTop="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/btnAboutUs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_about_us"
            android:backgroundTint="@color/vault_gray_medium"
            android:textColor="@color/white"
            android:layout_marginEnd="2.5dp"/>

        <Button
            android:id="@+id/btnSalir"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_salir"
            android:backgroundTint="@color/vault_gray_medium"
            android:textColor="@color/white"
            android:layout_marginStart="2.5dp"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCartas"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"/>

</LinearLayout>